[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/grids/GridVerticalGalos.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/Aviario.gd" type="Script" id=2]
[ext_resource path="res://assets/fontes/alterebro-pixel-font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://menus/PainelGalo.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Aviario" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.533333, 0.478431, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridGalos" parent="." instance=ExtResource( 1 )]

[node name="Voltar" type="Button" parent="."]
margin_left = 265.0
margin_top = 149.0
margin_right = 302.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Melhorar" type="Button" parent="."]
margin_left = 96.0
margin_top = 149.0
margin_right = 154.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "Usar racao"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantidade" type="Label" parent="."]
margin_left = 159.0
margin_top = 149.0
margin_right = 217.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "Quantidade: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PainelGalo" parent="." instance=ExtResource( 4 )]
margin_top = 10.0
margin_bottom = 138.0
[connection signal="selecionou" from="GridGalos" to="." method="_on_GridGalos_selecionou"]
[connection signal="button_down" from="Voltar" to="." method="_on_TextureButton_button_down"]
[connection signal="button_down" from="Melhorar" to="." method="_on_Melhorar_button_down"]
